2005-02-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	removed 'dashed property.

2005-02-13  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/lily.scm (define-safe-public): new macro for defining
	variables that can be used in --safe mode. Use it in *.scm
	instead of manually setting safe-objects in safe-lily.scm.

2005-02-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
	
	* Slur-dash patch by Bertalan.

	* ly/engraver-init.ly (EasyNotation): glyph name dash -> period.

	* stepmake/bin/add-html-footer.py (do_file): do i18n only once. 

2005-02-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: teTeX-3.0 inimf fix.  Comment-out.

2005-02-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile: teTeX-3.0 install fix.

	* Cygwin patch from Bertalan.

	* stepmake/stepmake/metafont-rules.make: Remove bashism.

2005-02-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in: 
	* SConstruct (symlink): teTeX-3.0 build fix: add map symlink.

	* tex/GNUmakefile: teTeX-3.0 fix: install .enc in fonts/enc.  Add
	2.0.x compatibility.

2005-02-08  Werner Lemberg  <wl@gnu.org>

	* mf/feta-din-code.mf: Format; clean up code.
	Replace `---' with `--' plus explicit path directions.
	(linethickness#, stafflinethickness#): Remove.
	("dynamic f"): Replace `draw' with `draw_rounded_block'.
	("dynamic s"): Improve shape.
	("dynamic p"): Improve shape.
	Replace `draw' with better outline approximation.
	("dynamic r"): Improve shape.
	Don't call `fill' and `draw' at the same time.

2005-02-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct (symlink):
	* GNUmakefile.in ($(builddir)/share/lilypond-force): teTeX-3.0
	build fix: add enc symlink.

	* lily/general-scheme.cc: Compile fixes: include wchar.h, string.h.

	Support for DESTDIR besides prefix=/foo

	* vim/GNUmakefile (local-install): Use $(INSTALL) -d iso mkdir.

	* stepmake/stepmake/*.make:
	* */GNUmakefile: