@@ -11,6 +11,7 @@ Graham Percival   - Documentation Editor
 
 CONTRIBUTORS
 
+Bertalan Fodor
 Christian Hitz
 Erlend Aasland
 Arno Waschk
